# nlp100

./: .gitignore  pyproject.toml
ch01/: ans00.py  ans01.py  ans02.py  ans03.py  ans04.py  ans05.py  ans06.py  ans07.py  ans08.py  ans09.py
ch02/: ans10.py  ans10.sh  ans11.py  ans11.sh  ans12.py  ans12.sh  ans13.py  ans13.sh  ans14.py  ans14.sh  ans15.py  ans15.sh  ans16.py  ans16.sh  ans17.py  ans17.sh  ans18.py  ans18.sh  ans19.py  ans19.sh
ch03/: ans20.py  ans21.py  ans22.py  ans23.py  ans24.py  ans25.py  ans26.py  ans27.py  ans28.py  ans29.py
ch04/: ans30.py  ans31.py  ans32.py  ans33.py  ans34.py  ans35.py  ans36.py  ans37.py  ans38.py  ans39.py
ch05/: ans40.py
