[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["Takanori Mohri <takanori.mohri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
requests = "^2.25.1"
japanize_matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
